--- a/package.json
+++ b/package.json
@@ -6,71 +6,30 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "test": "jest",
-    "db:migrate": "sequelize-cli db:migrate",
-    "db:seed": "sequelize-cli db:seed:all",
-    "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "build": "tsc"
   },
   "keywords": [
     "healthcare",
     "prescriptions",
-    "qr-codes",
-    "patient-records",
     "express",
-    "typescript",
-    "postgresql",
-    "sequelize"
+    "typescript"
   ],
   "author": "MedConnect Team",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "sequelize": "^6.35.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
-    "qrcode": "^1.5.3",
-    "uuid": "^9.0.1",
-    "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11",
-    "@types/nodemailer": "^6.4.14",
-    "@types/qrcode": "^1.5.5",
-    "@types/uuid": "^9.0.7",
-    "@types/compression": "^1.7.5",
-    "@types/morgan": "^1.9.9",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "sequelize-cli": "^6.6.2"
+    "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-      }
+    "node": ">=18.0.0"
   }
+}
