--- a/env.example
+++ b/env.example
@@ -2,9 +2,24 @@
 NODE_ENV=development
 PORT=3000
 
-# Database Configuration (for future use)
+# Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=medconnect_db
 DB_USER=postgres
 DB_PASSWORD=your_password
+DB_DIALECT=postgres
+
+# JWT Configuration
+JWT_SECRET=your_super_secret_jwt_key_here
+JWT_EXPIRES_IN=24h
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+EMAIL_FROM=noreply@medconnect.com
+
+# QR Code Configuration
+QR_EXPIRY_HOURS=72
