--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "description": "Digital Prescription & Patient Records System Backend",
   "main": "dist/server.js",
-"scripts": {
-  "start": "node dist/server.js",
-  "dev": "nodemon src/server.ts",
-  "build": "tsc",
-  "db:migrate": "sequelize-cli db:migrate",
-  "db:migrate:undo": "sequelize-cli db:migrate:undo",
-  "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-  "db:seed": "sequelize-cli db:seed:all",
-  "db:seed:undo": "sequelize-cli db:seed:undo:all",
-  "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate",
-  "db:fresh": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all"
-},
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts,.js,.mts,.mjs",
+    "lint:fix": "eslint . --ext .ts,.js,.mts,.mjs --fix",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate",
+    "db:fresh": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all"
+  },
   "keywords": [
     "healthcare",
     "prescriptions",
@@ -42,6 +44,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^8.56.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -52,6 +55,10 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "globals": "^13.24.0",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.1",
