feat: add comprehensive unit tests for authentication system
- Add AuthService tests covering registration, login, profile management
- Add AuthController tests for all endpoints with validation
- Add User model tests for password hashing and comparison
- Configure Jest with TypeScript and coverage reporting
- Add test setup files and environment configuration

--- a/env.example
+++ b/env.example
@@ -14,3 +14,10 @@ DB_DIALECT=postgres
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRES_IN=24h
 
+# Test Database Configuration (for running tests)
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5432
+TEST_DB_NAME=medconnect_test_db
+TEST_DB_USER=postgres
+TEST_DB_PASSWORD=your_test_password
+TEST_DB_DIALECT=postgres
