--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "db:seed": "sequelize-cli db:seed:all",
     "db:seed:undo": "sequelize-cli db:seed:undo:all",
     "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate",
-    "db:fresh": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all"
+    "db:fresh": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --watchAll=false"
   },
   "keywords": [
     "healthcare",
@@ -45,13 +49,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
+    "@jest/types": "^30.0.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
     "@types/nodemailer": "^6.4.14",
     "@types/qrcode": "^1.5.5",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^9.0.7",
@@ -59,8 +66,12 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "globals": "^13.24.0",
+    "jest": "^30.1.2",
+    "jest-environment-node": "^30.1.2",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
