--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,13 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["jest", "node"]
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+     "tests/**/*",
+    "jest.config.ts"
   ],
   "exclude": [
     "node_modules",
