fix: configure Jest and TypeScript for test coverage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
     "types": ["jest", "node"]
   },
   "include": [
-    "src/**/*",
-     "tests/**/*",
-    "jest.config.ts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
