--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --watchAll=false"
+    "test:ci": "jest --coverage --watchAll=false",
+    "test:unit": "jest tests/",
+    "test:services": "jest tests/services/",
+    "test:controllers": "jest tests/controllers/",
+    "test:models": "jest tests/models/"
   },
   "keywords": [
     "healthcare",
@@ -58,6 +62,7 @@
     "@types/node": "^20.9.0",
     "@types/nodemailer": "^6.4.14",
     "@types/qrcode": "^1.5.5",
+    "@types/sqlite3": "^3.1.11",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
@@ -70,6 +75,7 @@
     "jest-environment-node": "^30.1.2",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
